--- a/src/config.json
+++ b/src/config.json
@@ -15,7 +15,7 @@
   "siteName": "Uguu",
   "subTitle": "wahooo",
   "DOMAIN": "domain.com",
-  "FILE_DOMAIN": "files.domain.com",
+  "FILE_DOMAIN": "domain.com/files",
   "abuseContact": "abuse@example.com",
   "infoContact": "info@example.com",
   "ServerCountryLocation": "Sweden",
@@ -28,7 +28,7 @@
   "kofiUrl": "",
   "malwareBanner": false,
   "DB_MODE": "sqlite",
-  "DB_PATH": "/var/www/db/uguuDB.sq3",
+  "DB_PATH": "/var/www/db/uguu.sq3",
   "DB_USER": "NULL",
   "DB_PASS": "NULL",
   "LOG_IP": false,
